Fixed the Errors and contrast errors

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 
 html {
   font-size: 10px;
-  background-color: #dde;
+  background-color:#f0eddb;
 }
 
 body {
@@ -31,8 +31,7 @@ p, input, li, table, label {
 font[size="7"] {
   font-size: 4rem;
   text-align: center;
-  color: white;
-  text-shadow: 2px 2px 10px black;
+  color: #000000;
 }
 
 font[size="6"] {
@@ -44,15 +43,23 @@ font[size="5"] {
   font-size: 2.2rem;
 }
 
-p, li, table {
+p, table {
   font-size: 1.6rem;
   line-height: 1.5;
+}
+li{
+  font-size:2rem;
+  line-height: 1.5;
+  font-weight: bold;
 }
 
 /* || header layout */
 
-div[class="nav"], article, footer, .secondary {
-  background-color: rgb(125, 169, 213);
+article, .secondary {
+  background-color: #f0eddb;
+}
+div[class="nav"], footer {
+  background-color: #5c4f51;
 }
 
 article, footer, .secondary {
@@ -65,7 +72,6 @@ article {
 
 div[class="nav"] {
   height: 50px;
-  background-color: ff80ff;
   display: flex;
   padding: 1% 0;
   margin-bottom: 10px;
@@ -86,10 +92,11 @@ div[class="nav"] li {
 
 div[class="nav"] a {
   display: inline-block;
-  font-size: 2rem;
+  font-size: 2.0rem;
   text-transform: uppercase;
   text-decoration: none;
-  color: black;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 div[class="nav"] .search {
@@ -117,6 +124,10 @@ div[class="nav"] .search {
   color: white;
 }
 
+footer p {
+  color: #ffffff;
+  font-weight: bold;
+}
 /* || main layout */
 
 main {
@@ -139,7 +150,7 @@ footer {
 
 table {
   width: 100%;
-  background-color: #dde;
+  background-color:#dde;
   border-collapse: collapse;
 }
 
@@ -156,7 +167,7 @@ th[scope="col"] {
 }
 
 tbody tr:nth-child(odd) {
-  background-color: #def;
+  background-color: rgb(250, 250, 250);
 }
 
 /* styling content images and audio */
@@ -173,7 +184,7 @@ audio {
 /* Comments styling */
 
 .comments {
-  background-color: #def;
+  background-color: #f0eddb;
   padding: 10px;
 }
 
